--- a/Source/Client/CelestialLeague.Client.csproj
+++ b/Source/Client/CelestialLeague.Client.csproj
@@ -7,7 +7,7 @@
         <LangVersion>latest</LangVersion>
         <CelestePrefix Condition="'$(CelestePrefix)' == '' And Exists('..\..\..\Celeste.dll')">..\..\..</CelestePrefix>
         <CelestePrefix Condition="'$(CelestePrefix)' == ''">C:\Program Files (x86)\Steam\steamapps\common\Celeste</CelestePrefix>
-        <ZippedFiles>..\everest.yaml;..\bin\**\*.*;..\Audio\**\*.*;..\Dialog\**\*.*;..\Graphics\**\*.*;..\Ahorn\**\*.*;..\Loenn\**\*.*</ZippedFiles>
+        <ZippedFiles>..\everest.yaml;..\bin\**\*.*;..\Audio\**\*.*;..\Dialog\**\*.*;..\Graphics\**\*.*;..\Content\**\*.*;..\Ahorn\**\*.*;..\Loenn\**\*.*</ZippedFiles>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     </PropertyGroup>
@@ -36,11 +36,11 @@
         <Copy SourceFiles="$(OutputPath)\$(AssemblyName).pdb" DestinationFolder="..\bin" />
     </Target>
 
-    <Target Name="PackageMod" AfterTargets="CopyFiles" Inputs="$(ZippedFiles)" Outputs="..\UITest.zip" Condition="'$(Configuration)' == 'Release'">
+    <Target Name="PackageMod" AfterTargets="CopyFiles" Inputs="$(ZippedFiles)" Outputs="..\CelestialLeague.zip" Condition="'$(Configuration)' == 'Release'">
         <ItemGroup>
             <FilesToPackage Include="$(ZippedFiles)" />
         </ItemGroup>
-        <PackageMod Files="@(FilesToPackage)" OutputPath="..\UITest.zip" />
+        <PackageMod Files="@(FilesToPackage)" OutputPath="..\CelestialLeague.zip" />
     </Target>
     
 
@@ -90,7 +90,7 @@
                     Uri relativeUri = fromUri.MakeRelativeUri(toUri);
                     string relativePath = Uri.UnescapeDataString(relativeUri.ToString());
                 
-                    if (toUri.Scheme.Equals("file", StringComparison.InvariantCultureIgnoreCase))
+                    if (toUri.Scheme.Equals("file", StringComparison.InvariantCultureInvariantCultureIgnoreCase))
                     {
                         relativePath = relativePath.Replace(Path.DirectorySeparatorChar, Path.AltDirectorySeparatorChar);
                     }
@@ -103,4 +103,3 @@
     </UsingTask>
 
 </Project>
-
