made a ui renderer (kinda hoped it'd render atleast, for now ill try to fix it)

--- a/Source/Client/CelestialLeague.Client/CelestialLeague.Client.csproj
+++ b/Source/Client/CelestialLeague.Client/CelestialLeague.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk" InitialTargets="CopyContent">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -7,7 +7,6 @@
         <LangVersion>latest</LangVersion>
         <CelestePrefix Condition="'$(CelestePrefix)' == '' And Exists('..\..\..\Celeste.dll')">..\..\..</CelestePrefix>
         <CelestePrefix Condition="'$(CelestePrefix)' == ''">..\lib-stripped</CelestePrefix>
-        <ZippedFiles>..\everest.yaml;..\bin\**\*.*;..\Audio\**\*.*;..\Dialog\**\*.*;..\Graphics\**\*.*;..\Content\**\*.*;..\Ahorn\**\*.*;..\Loenn\**\*.*</ZippedFiles>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
         <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     </PropertyGroup>
@@ -31,12 +30,7 @@
         <Reference Include="$(CelestePrefix)\FNA.dll" Private="false" Condition="Exists('$(CelestePrefix)\FNA.dll')" />
     </ItemGroup>
 
-    <Target Name="CopyFiles" AfterTargets="Build" Inputs="$(OutputPath)\$(AssemblyName).dll;$(OutputPath)\$(AssemblyName).pdb" Outputs="..\bin\$(AssemblyName).dll;..\bin\$(AssemblyName).pdb">
-        <Copy SourceFiles="$(OutputPath)\$(AssemblyName).dll" DestinationFolder="..\bin" />
-        <Copy SourceFiles="$(OutputPath)\$(AssemblyName).pdb" DestinationFolder="..\bin" />
-    </Target>
-
-    <Target Name="CopyContent" AfterTargets="CopyFiles">
+    <Target Name="CopyContent">
         <Message Text="Copying Content folder..." Importance="high" />
         <ItemGroup>
             <ContentFiles Include="..\..\..\Dialog\**\*.*" />
@@ -48,14 +42,6 @@
         <Message Text="Content copy completed" Importance="high" />
     </Target>
 
-    <Target Name="PackageMod" AfterTargets="CopyFiles" Inputs="$(ZippedFiles)" Outputs="..\CelestialLeague.zip" Condition="'$(Configuration)' == 'Release'">
-        <ItemGroup>
-            <FilesToPackage Include="$(ZippedFiles)" />
-        </ItemGroup>
-        <PackageMod Files="@(FilesToPackage)" OutputPath="..\CelestialLeague.zip" />
-    </Target>
-    
-
     <!-- Project References -->
     <ItemGroup>
        <ProjectReference Include="..\..\Shared\CelestialLeague.Shared.csproj" />
@@ -64,60 +50,7 @@
        <ProjectReference Include="..\CelestialLeague.Client.Services\CelestialLeague.Client.Services.csproj" />
        <ProjectReference Include="..\CelestialLeague.Client.Motion\CelestialLeague.Client.Motion.csproj" />
     </ItemGroup>
-
-    <!-- Inline task used to create a .zip for the mod -->
-    <UsingTask TaskName="PackageMod" TaskFactory="RoslynCodeTaskFactory" AssemblyFile="$(MSBuildToolsPath)\Microsoft.Build.Tasks.Core.dll">
-        <ParameterGroup>
-            <Files ParameterType="Microsoft.Build.Framework.ITaskItem[]" Required="true" />
-            <OutputPath ParameterType="System.String" Required="true" />
-        </ParameterGroup>
-        <Task>
-            <Using Namespace="System.IO" />
-            <Using Namespace="System.IO.Compression" />
-            <Code Type="Fragment" Language="cs">
-            <![CDATA[
-                var projectDir = Path.Combine(@"$(ProjectDir)", ".."); // Go one level up, since we're inside the 'Source' directory
-                projectDir = Uri.UnescapeDataString(projectDir);
-            
-                if (File.Exists(OutputPath))
-                    File.Delete(OutputPath);
-
-                using (ZipArchive zip = ZipFile.Open(OutputPath, ZipArchiveMode.Create))
-                {
-                    foreach (var file in Files)
-                    {
-                        string filePath = file.GetMetadata("FullPath");
-                        string entryName = GetRelativePath(projectDir, filePath);
-                        
-                        zip.CreateEntryFromFile(filePath, entryName);
-                    }
-                }
     
-                string GetRelativePath(string fromPath, string toPath)
-                {
-                    if (string.IsNullOrEmpty(fromPath)) throw new ArgumentNullException(nameof(fromPath));
-                    if (string.IsNullOrEmpty(toPath))   throw new ArgumentNullException(nameof(toPath));
-                
-                    Uri fromUri = new Uri(fromPath);
-                    Uri toUri = new Uri(toPath);
-                
-                    if (fromUri.Scheme != toUri.Scheme) { return toPath; } // path can't be made relative.
-                
-                    Uri relativeUri = fromUri.MakeRelativeUri(toUri);
-                    string relativePath = Uri.UnescapeDataString(relativeUri.ToString());
-                
-                    if (toUri.Scheme.Equals("file", StringComparison.InvariantCultureIgnoreCase))
-                    {
-                        relativePath = relativePath.Replace(Path.DirectorySeparatorChar, Path.AltDirectorySeparatorChar);
-                    }
-                
-                    return relativePath;
-                }
-            ]]>
-            </Code>
-        </Task>
-    </UsingTask>
-
     <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
         <Message Text="Building Celestial League Client v$(Version)..." Importance="high" />
     </Target>
