made Toggleable Clipping into Panel, SliderButton for Menu, and Elastic interpolation to Motion

--- a/Source/Client/CelestialLeague.Client/CelestialLeague.Client.csproj
+++ b/Source/Client/CelestialLeague.Client/CelestialLeague.Client.csproj
@@ -31,15 +31,16 @@
     </ItemGroup>
 
     <Target Name="CopyContent">
-        <Message Text="Copying Content folder..." Importance="high" />
+        <Message Text="Copying folders..." Importance="high" />
         <ItemGroup>
             <ContentFiles Include="..\..\..\Dialog\**\*.*" />
+            <GraphicsFiles Include="..\..\..\Graphics\**\*.*" />
         </ItemGroup>
         <Message Text="Found @(ContentFiles->Count()) content files" Importance="high" />
         <Copy SourceFiles="@(ContentFiles)" 
               DestinationFolder="$(OutputPath)\Dialog\%(RecursiveDir)" 
               SkipUnchangedFiles="false" />
-        <Message Text="Content copy completed" Importance="high" />
+        <Message Text="Copy completed" Importance="high" />
     </Target>
 
     <!-- Project References -->
